FIX: vc endpoint, nonce cache error, local file user data